--- a/blog/087.md
+++ b/blog/087.md
@@ -123,6 +123,121 @@ pipeline {
 }
 ```
 
+##### Clean Clone Build Upload Backup Update Restart
+scp -C & ssh use ProxyCommand, add-host, trimpath
+```groovy
+pipeline {
+    agent {
+        docker {
+            image 'golang:1.24.4-bookworm'
+            args  '-u 0:0 --add-host=git.localhost.com:192.168.1.71'
+        }
+    }
+    parameters {
+        choice(name: 'IP', choices: ['192.168.1.8'], description: '服务器地址')
+        booleanParam(name: 'CLEAN', defaultValue: false, description: 'GoClean')
+        booleanParam(name: 'CLONE', defaultValue: true, description: 'GitClone')
+        booleanParam(name: 'BUILD', defaultValue: true, description: 'GoBuild')
+        booleanParam(name: 'UPLOAD', defaultValue: true, description: 'ScpUpload')
+        booleanParam(name: 'BACKUP', defaultValue: true, description: 'Backup')
+        booleanParam(name: 'UPDATE', defaultValue: true, description: 'Update')
+        booleanParam(name: 'RESTART', defaultValue: true, description: '重启')
+    }
+    stages {
+        stage('init') {
+            steps {
+                echo "params ${IP} ${CLEAN} ${CLONE} ${BUILD} ${UPLOAD} ${BACKUP} ${UPDATE} ${RESTART}"
+                sh '''
+                sed -i "s@http://deb.debian.org@https://mirrors.aliyun.com@g" /etc/apt/sources.list.d/debian.sources
+                apt-get update && apt-get install -y netcat-openbsd
+                go env -w GOPROXY=https://goproxy.cn,direct
+                go env -w GOMODCACHE=$PWD/go-mod
+                go env -w GOCACHE=$PWD/go-build
+                '''
+                sshagent(credentials: ["${IP}"]) {
+                    sh '''
+                    ssh -o StrictHostKeyChecking=no -l ubuntu ${IP} uname -a
+                    '''
+                }
+            }
+        }
+        stage('clean') {
+            when { expression { params.CLEAN } }
+            steps {
+                sh '''
+                go clean -cache
+                go clean -modcache
+                '''
+            }
+        }
+        stage('clone') {
+            when { expression { params.CLONE } }
+            steps {
+                withCredentials([usernamePassword(credentialsId: 'git', usernameVariable: 'username', passwordVariable: 'password')]) {
+                    sh '''
+                    rm -rf framework
+                    git clone https://$username:$password@github.com/panshiqu/framework.git
+                    '''
+                }
+            }
+        }
+        stage('build') {
+            when { expression { params.BUILD } }
+            steps {
+                sh '''#!/bin/bash
+                cd framework
+                go mod tidy
+                for i in db manager proxy login game; do
+                    go build --trimpath -o ${i}_server ${i}.go
+                done
+                '''
+            }
+        }
+        stage('upload') {
+            when { expression { params.UPLOAD } }
+            steps {
+                sshagent(credentials: ["${IP}"]) {
+                    sh '''
+                    # -o "ProxyCommand=nc -X connect -x 192.168.1.5:10809 %h %p"
+                    scp -C framework/*_server ubuntu@${IP}:~/update
+                    '''
+                }
+            }
+        }
+        stage('backup') {
+            when { expression { params.BACKUP } }
+            steps {
+                sshagent(credentials: ["${IP}"]) {
+                    sh '''
+                    ssh ubuntu@${IP} 'dir=backup/server_$(date +%Y_%m_%d_%H_%M_%s); mkdir -p $dir; mv work/*_server $dir'
+                    '''
+                }
+            }
+        }
+        stage('update') {
+            when { expression { params.UPDATE } }
+            steps {
+                sshagent(credentials: ["${IP}"]) {
+                    sh '''
+                    ssh ubuntu@${IP} 'cp update/*_server work; chmod +x work/*_server'
+                    '''
+                }
+            }
+        }
+        stage('restart') {
+            when { expression { params.RESTART } }
+            steps {
+                sshagent(credentials: ["${IP}"]) {
+                    sh '''
+                    ssh ubuntu@${IP} echo restart
+                    '''
+                }
+            }
+        }
+    }
+}
+```
+
 ##### mysqldump
 ```groovy
 pipeline {
