--- a/blog/089.md
+++ b/blog/089.md
@@ -26,6 +26,11 @@ _2024-06-14 10:00:00_
 
 其余看看便知的就不赘述啦
 
+### 启动etcd
+```bash
+docker run -d --name etcd --publish 127.0.0.1:2379:2379 --publish 127.0.0.1:2380:2380 --env ALLOW_NONE_AUTHENTICATION=yes bitnami/etcd:latest
+```
+
 ### server.go
 ```go
 package main
