--- a/blog/090.md
+++ b/blog/090.md
@@ -19,7 +19,7 @@ _2024-06-24 10:00:00_
 
 ### 启动RabbitMQ
 ```bash
-docker run -d -p 15672:15672 -p 5672:5672 --hostname rabbitmq --name rabbitmq -e RABBITMQ_DEFAULT_USER=guest -e RABBITMQ_DEFAULT_PASS=guest rabbitmq:3-management
+docker run -d -p 127.0.0.1:15672:15672 -p 127.0.0.1:5672:5672 --hostname rabbitmq --name rabbitmq -v ~/docker/rabbitmq:/var/lib/rabbitmq -e RABBITMQ_DEFAULT_USER=guest -e RABBITMQ_DEFAULT_PASS=guest rabbitmq:4-management
 ```
 
 ### 消费者
