--- a/blog/088.md
+++ b/blog/088.md
@@ -52,50 +52,47 @@ _2023-12-01 10:00:00_
 >
 > 酷爱编程，希望从事郑州全职 Golang 编程工作。
 >
-> 最近的[博客](https://panshiqu.github.io)能很好的说明可胜任（期望）的工作内容（方向）。
->
 > 熟悉网络编程、并发编程、消息队列，云原生、云计算、容器化、微服务、分布式，设计模式、数据结构、常用算法，有良好的编码风格。
 >
 > 工作认真负责、积极主动、容易相处、能承受一定的工作压力，是一个注重学习的人，是一个对理想有执着追求的人。
+>
+> 最近的[博客](https://panshiqu.github.io)能很好的说明可胜任（期望）的工作内容（方向）。
+>
+> 近 9 年均使用 Go 作为主要语言从事全职开发工作
+>
+> [游戏](092.html)、[网关](093.html)应该能很好展现我的架构设计、编程开发能力
+>
+> [网络游戏服务端架构](https://github.com/panshiqu/framework)应该能反映我的水平，我被Fork与Star最多的仓库
+>
+> [Analyst](https://github.com/panshiqu/analyst)是我早期的开源的自用的仍在线成品，可访问[价格曲线](https://line.chainsscan.com)、[交互机器人](https://t.me/analyst1bot)
+>
+> MySQL 存储基础数据（主读写从只读），Redis 存储热点缓存，ClickHouse 存储统计打点
+>
+> [RabbitMQ](090.html) / [NSQ](086.html#docker-compose-部署-nsq) 业务解耦，[Docker](096.html#docker) 部署依赖，[Jenkins](087.html) 持续交付
+>
+> [gRPC-etcd](089.html) 服务发现，[K8s](094.html) 容器编排，[EFK](095.html) 日志架构
+>
+> Nginx 反向代理 HTTPs、WSs，JS 接口探查
 
 ## 工作经历
 **河南云游互娱科技有限公司 | Golang** `2024年01月-至今`
-> 负责比赛、狼人杀、你画我猜、帧同步游戏等服务端开发
-* 实现比赛后台部分模块、多个功能对外接口，少量游戏逻辑
-* 封装KCP-GO实现网络多人帧同步游戏服务端所有需求（PICO PARK）
-* 封装RabbitMQ发布与消费，支持连接恢复、死信队列等，实现多业务日志集中处理服务
-* 多游戏实现功能完备的模拟客户端便于自测，批量启动狼人杀配合压力测试
-* 网关连接游戏使用gRPC双向流，实现服务发现、负载均衡可重连
-* 部署、维护、更新线上狼人杀（比赛）正式服务器
+> 负责比赛、狼人杀等游戏服务端国内和海外版本的开发与维护
+>
+> 实现游戏节点多开，用户行为打点，数据统计后台，持续交付与部署，模拟客户端交互等
 
 **郑州亮点网络技术有限公司 | Golang** `2022年11月-2023年11月`
-> 负责国内、海外捕鱼游戏服务端开发
-* 解决大厅/游戏重复开发两套业务逻辑，数据按需同步到游戏缓存
-* 重写服务端充值相关所有逻辑降低丢单
-* 带类型和参数的道具变化日志经消息队列落地分表数据库便于查看与统计
-* 经消息队列无缓存实现断线重连，优雅停服落地用户数据
-* 功能和活动实现统一的任务系统、红点约定
-* 重构注册服务发现逻辑并代理中心服务器为其瘦身防其崩溃不可恢复
-* 理清库存经济体系并部分修改完善
-* 服务端自测试工具，开发期间不依赖客户端
-* 服务可用性检测工具，监控并快速定位线上问题
-* 配置变化跟踪工具，辅助产品运营二次确认修改
-* jenkins-docker 一键配置编译部署、数据库同步
-* proxmox 虚拟公司内部测试服取代实体物理机
+> 负责国内、海外捕鱼游戏服务端的开发与维护
+>
+> 优化项目框架，重写充值逻辑，理清库存体系，数据落地统计，实现服务监测等
 
-**TICO（PTE.）LTD. | Golang** `2020年09月-2022年09月`
-> 运维开发多款运营中游戏
->
-> 仿抄开源 DEFI 项目并上线，Go 开发周边配套
->
-> 期间实现聊天、代理、充值、监控、统计、后台、采集等系统
-
-**郑州原力网络科技有限公司（百易） | Golang** `2015年10月-2019年06月`
-> C/C++ 开发并上线斗地主游戏（带比赛）
->
-> Golang 开发并上线电玩城游戏（捕鱼等多款子游戏）
->
+**郑州原力网络科技有限公司（百易、TICO） | Golang** `2015年10月-2022年09月`
+> C/C++ 开发并上线斗地主游戏（带比赛）  
+> Golang 开发并上线电玩城游戏（捕鱼等多款子游戏）  
 > Golang 开发并上线紫幻麻将游戏（比赛、游戏群、斗地主、双升等）
+>
+> 负责运维开发多款运营中游戏  
+> 仿抄开源 DEFI 项目并上线，Go 开发周边配套  
+> 期间实现聊天、代理、充值、监控、统计、后台、采集等系统
 
 **河南畅天网络科技有限公司 | C++** `2014年09月-2015年09月`
 > 参与妖精传服务端，新亚家APP服务端以及附属客户端开发工作
